@@ -119,23 +119,24 @@ int _rpmds_unspecified_epoch_noise = 0;
 rpmds XrpmdsUnlink(rpmds ds, const char * msg, const char * fn, unsigned ln)
 {
     if (ds == NULL) return NULL;
+    yarnPossess(ds->use);
 /*@-modfilesys@*/
 if (_rpmds_debug && msg != NULL)
-fprintf(stderr, "--> ds %p -- %d %s at %s:%u\n", ds, ds->nrefs, msg, fn, ln);
+fprintf(stderr, "--> ds %p -- %ld %s at %s:%u\n", ds, yarnPeekLock(ds->use), msg, fn, ln);
 /*@=modfilesys@*/
-    ds->nrefs--;
+    yarnTwist(ds->use, BY, -1);
     return NULL;
 }
 
 rpmds XrpmdsLink(rpmds ds, const char * msg, const char * fn, unsigned ln)
 {
     if (ds == NULL) return NULL;
-    ds->nrefs++;
-
+    yarnPossess(ds->use);
 /*@-modfilesys@*/
 if (_rpmds_debug && msg != NULL)
-fprintf(stderr, "--> ds %p ++ %d %s at %s:%u\n", ds, ds->nrefs, msg, fn, ln);
+fprintf(stderr, "--> ds %p ++ %ld %s at %s:%u\n", ds, yarnPeekLock(ds->use)+1, msg, fn, ln);
 /*@=modfilesys@*/
+    yarnTwist(ds->use, BY, 1);
 
     /*@-refcounttrans@*/ return ds; /*@=refcounttrans@*/
 }
@@ -179,8 +180,13 @@ rpmds rpmdsFree(rpmds ds)
     if (ds == NULL)
 	return NULL;
 
-    if (ds->nrefs > 1)
-	return rpmdsUnlink(ds, ds->Type);
+    yarnPossess(ds->use);
+/*@-modfilesys@*/
+if (_rpmds_debug)
+fprintf(stderr, "--> ds %p -- %ld %s at %s:%u\n", ds, yarnPeekLock(ds->use), ds->Type, __FILE__, __LINE__);
+/*@=modfilesys@*/
+    if (yarnPeekLock(ds->use) <= 1) {
+	yarnLock use = ds->use;
 
 /*@-modfilesys@*/
 if (_rpmds_debug < 0)
@@ -204,11 +210,14 @@ fprintf(stderr, "*** ds %p\t%s[%d]\n", ds, ds->Type, ds->Count);
     ds->exclude = mireFreeAll(ds->exclude, ds->nexclude);
     ds->include = mireFreeAll(ds->include, ds->ninclude);
 
-    (void) rpmdsUnlink(ds, ds->Type);
     /*@-refcounttrans -usereleased@*/
     memset(ds, 0, sizeof(*ds));		/* XXX trash and burn */
     ds = _free(ds);
     /*@=refcounttrans =usereleased@*/
+	yarnTwist(use, BY, -1);
+	use = yarnFreeLock(use);
+    } else
+	yarnTwist(ds->use, BY, -1);
     return NULL;
 }
 
@@ -314,6 +323,7 @@ assert(scareMem == 0);		/* XXX always allocate memory */
     Count = he->c;
     if (xx && N != NULL && Count > 0) {
 	ds = xcalloc(1, sizeof(*ds));
+	ds->use = yarnNewLock(0);
 	ds->Type = Type;
 	ds->h = NULL;
 	ds->i = -1;
@@ -564,6 +574,7 @@ rpmds rpmdsThis(Header h, rpmTag tagN, evrFlags Flags)
     R = _free(R);
 
     ds = xcalloc(1, sizeof(*ds));
+    ds->use = yarnNewLock(0);
     ds->Type = Type;
     ds->tagN = tagN;
     ds->Count = 1;
@@ -599,6 +610,7 @@ rpmds rpmdsSingle(rpmTag tagN, const char * N, const char * EVR, evrFlags Flags)
     Type = rpmdsTagName(tagN);
 
     ds = xcalloc(1, sizeof(*ds));
+    ds->use = yarnNewLock(0);
     ds->Type = Type;
     ds->tagN = tagN;
     ds->A = NULL;
@@ -945,6 +957,7 @@ static rpmds rpmdsDup(const rpmds ods)
     size_t nb;
 
     ds->h = (ods->h != NULL ? headerLink(ods->h) : NULL);
+    ds->use = yarnNewLock(0);
 /*@-assignexpose@*/
     ds->Type = ods->Type;
 /*@=assignexpose@*/
